Fix margin overflow on games page

--- a/space-station/theme.module.scss
+++ b/space-station/theme.module.scss
@@ -24,6 +24,9 @@ body {
 $max-content-width: 1280px;
 
 .root {
+  display: flex;
+  flex-direction: column;
+
   min-height: 100%;
 
   font-family: "Kanit", sans-serif;
